<resources>
    <string name="app_name">P1FigurasGeometricas</string>
    <string name="cuadro">Cuadro</string>
    <string name="circulo">Círculo</string>
    <string name="triangulo">Triángulo</string>
    <string name="cubo">Cubo</string>
    <string name="calcular">Calcular Medidas Geométricas</string>
    <string name="titulo">Figuras Geométricas</string>
    <string name="elegir">Elija la figura geométrica</string>
    <string name="tipoDeFigura">Tipo de Figura Geométrica</string>
    <string name="lado">Lado</string>
    <string name="radio">Radio</string>
    <string name="ladoA">Lado A</string>
    <string name="ladoB">Lado B</string>
    <string name="ladoC">Lado C</string>
</resources>
