<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.johnduran.p1figurasgeometricas.MainActivity"
    android:background="#000033"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginBottom="45dp"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo"
                android:textSize="30dp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="25dp"
                android:text="@string/tipoDeFigura"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"

            >
            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/rRadioGrupo"
                >
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cuadro"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:id="@+id/rCuadro"
                    android:theme="@style/MyRadioButton"
                    android:checked="true"

                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/circulo"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:id="@+id/rCirculo"
                    android:theme="@style/MyRadioButton"

                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/triangulo"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:id="@+id/rTriangulo"
                    android:theme="@style/MyRadioButton"
                    />
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cubo"
                    android:textColor="@color/white"
                    android:textSize="18dp"
                    android:id="@+id/rCubo"
                    android:theme="@style/MyRadioButton"


                    />
            </RadioGroup>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            >

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/lado"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:id="@+id/tLado"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="Ingrese Lado en cm."
                android:inputType="number"
                android:textColorHint="@color/gray"
                android:id="@+id/eLado"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            >

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/radio"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:id="@+id/tRadio"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="Ingrese Radio en cm."
                android:inputType="number"
                android:textColorHint="@color/gray"
                android:id="@+id/eRadio"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            >

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/ladoA"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:id="@+id/tLadoA"

                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="Ingrese Lado A en cm."
                android:inputType="number"
                android:textColorHint="@color/gray"
                android:id="@+id/eLadoA"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            >

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/ladoB"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:id="@+id/tLadoB"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="Ingrese Lado B en cm."
                android:inputType="number"
                android:textColorHint="@color/gray"
                android:id="@+id/eLadoB"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:layout_marginLeft="40dp"
            >

            <TextView
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:text="@string/ladoC"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:layout_marginRight="10dp"
                android:id="@+id/tLadoC"
                />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="Ingrese Lado C en cm."
                android:inputType="number"
                android:textColorHint="@color/gray"
                android:id="@+id/eLadoC"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calcular"
                android:background="@drawable/button"
                android:textColor="@color/navy"
                android:gravity="center"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:onClick="fCalcular"
                android:id="@+id/bCalcular"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="25dp"
                android:id="@+id/tResultado"
                />
        </LinearLayout>
    </LinearLayout>




</ScrollView>
